# bonde-actions-api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: build-and-publish-docker.yml  publish-docker.yml
app/: config.py  db.py  enum.py  graphql.py  logger.py  machine.py  main.py  models.py  validate.py
app/api/: typing.py
app/api/routes/: call.py  conference.py
compose/local/fastapi/: Dockerfile  requirements.txt
compose/production/fastapi/: Dockerfile  requirements.txt
migrations/: env.py
migrations/versions/: 01c0831aa734_added_answered_by_column_in_phone_.py  4a5ab5a93044_added_queued_enum_to_callstatus.py  4fb0c27f2226_added_kind_column_in_phone_twilio_calls_.py  5c712f01f6dc_added_reason_field_to_phone_calls_table.py  5dcd0a4c3dfb_add_phone_tables.py  736e24cb4087_added_phone_calls_and_phone_twilio_.py  b1f0ec1a3030_update_case_to_callstatus_e_callreason_.py  cdfb8ef9b186_added_enum_to_status_field_in_phone_.py  f7112eb1212c_fix_enum_coluns.py
src/app/: database.py  main.py  settings.py  utils.py
src/app/models/: phone_pressure.py  twilio_callback.py
src/app/services/: bonde_graphql.py  twilio.py
tests/: conftest.py  test_get_status.py  test_post_call.py  test_state_machine_call.py
